# docassemble-RevocationOfPowerOfAttorney2023

./: LICENSE  MANIFEST.in  pyproject.toml  setup.py
docassemble/RevocationOfPowerOfAttorney2023/data/questions/: revocation_of_power_of_attorney2023.yml
